.ci-logs/last-build-error.log
Cannot remap modifiers because it does not exists in any of the targets [] or their parents.
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:28: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:29: error: package VertexFormat does not exist
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:37: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:36: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:35: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:34: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:33: error: package RenderPhase does not exist
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:32: error: cannot find symbol
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:31: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:28: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:37: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:36: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:35: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:34: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:32: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:31: error: cannot find symbol
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:29: error: package VertexFormat does not exist
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:33: error: package RenderPhase does not exist
---FULL TAIL---
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:32: error: cannot find symbol
            .program(RenderPhase.LINES_PROGRAM)
                     ^
  symbol:   variable RenderPhase
  location: class StorageESP
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:31: error: cannot find symbol
        RenderLayer.MultiPhaseParameters.builder()
                   ^
  symbol:   variable MultiPhaseParameters
  location: class RenderLayer
Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
9 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/runner/work/Azelux-Client/Azelux-Client/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava' (registered by plugin class 'org.gradle.api.plugins.JavaBasePlugin').
> Compilation failed; see the compiler output below.
  Note: /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/gui/HudRenderer.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:28: error: cannot find symbol
          VertexFormats.LINES,
                       ^
    symbol:   variable LINES
    location: class VertexFormats
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:37: error: cannot find symbol
              .depthTest(RenderPhase.ALWAYS_DEPTH_TEST)
                         ^
    symbol:   variable RenderPhase
    location: class StorageESP
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:36: error: cannot find symbol
              .writeMaskState(RenderPhase.COLOR_MASK)
                              ^
    symbol:   variable RenderPhase
    location: class StorageESP
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:35: error: cannot find symbol
              .transparency(RenderPhase.TRANSLUCENT_TRANSPARENCY)
                            ^
    symbol:   variable RenderPhase
    location: class StorageESP
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:34: error: cannot find symbol
              .layering(RenderPhase.NO_LAYERING)
                        ^
    symbol:   variable RenderPhase
    location: class StorageESP
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:32: error: cannot find symbol
              .program(RenderPhase.LINES_PROGRAM)
                       ^
    symbol:   variable RenderPhase
    location: class StorageESP
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:31: error: cannot find symbol
          RenderLayer.MultiPhaseParameters.builder()
                     ^
    symbol:   variable MultiPhaseParameters
    location: class RenderLayer
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:29: error: package VertexFormat does not exist
          VertexFormat.DrawMode.LINES,
                      ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/module/render/StorageESP.java:33: error: package RenderPhase does not exist
              .lineWidth(new RenderPhase.LineWidth(OptionalDouble.empty()))
                                        ^
  9 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.6.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1m 8s
1 actionable task: 1 executed
